# Basic-algorithm-exercise

./: .gitignore  Basic-algorithm-exercise  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.html  README.md  cmake_install.cmake  compile_commands.json  genMd.py  output.md  笔记.md
src/: main.cpp
src/cpp/: ex0.cpp  ex1.c  ex10.cpp  ex11.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  testTemplate.cpp
src/exercise/ex0001/: main  main.cpp
src/exercise/ex0002/: main.cpp
src/exercise/ex0004/: main.cpp
src/exercise/ex0007/: main.cpp
src/exercise/ex0008/: main.cpp
src/exercise/ex0010/: main.cpp
src/exercise/ex0011/: main.cc  main.cpp
src/exercise/ex0013/: main.cc
src/exercise/ex0014/: main.cc
src/headers/: ex0.h  ex1.h  ex10.h  ex11.h  ex2.h  ex3.h  ex4.h  ex5.h  ex6.h  ex7.h  ex8.h  ex9.h  header.h
src/practice/: 0001.cc  0002.cc
src/practice/ex0002/: main.cpp
src/practice/ex0003/: main.cpp
src/practice/ex0004/: main.cpp
src/practice/ex0005/: main.cpp
src/practice/ex0006/: main.cpp
src/practice/ex0007/: main.cpp
src/practice/ex0008/: main.cpp
src/practices/: 0001.cc  0005.cc  0006.cc  0007.cc  0009.cc  0010.cc  0011.cc  0012.cc  0013.cc  0014.cc
src/solutions/: 202206-1.cc  202206-2.cc  202206-3.cc
